--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "homepage": "https://github.com/elisasara/venUser#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "chai": "^4.1.2",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "mocha": "^5.2.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
     "request": "^2.86.0",
