--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "mocha": "^5.2.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
+    "nightmare": "^3.0.1",
     "request": "^2.86.0",
     "sequelize": "^4.37.7",
     "sequelize-cli": "^4.0.0"
